[tool.poetry]
name = "lumina-backend"
version = "0.1.0"
description = "Backend API service for Lumina, providing RESTful endpoints for frontend integration."
authors = ["Lukas Reiter <chopicalqui@protonmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "0.115.4", extras = ["standard"]}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
